# rcompare

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLOUD_FEATURES_SUMMARY.md  COMPLIANCE_MATRIX.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STATUS.md  FEATURE_COMPARISON.md  GAPS.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_VFS.md  clippy.toml  deny.toml  wiki_comparison.html
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  coverage.yml  labeler.yml  release.yml  scheduled.yml  security.yml
docs/: CI_AND_PATTERN_IMPROVEMENTS.md  CLOUD_STORAGE.md  KDE_COMPLIANCE_CHECKLIST.md  KDE_COMPLIANCE_SESSION_SUMMARY.md  KDE_MENU_AUDIT.md  KDE_MENU_RESTRUCTURE_CHANGES.md  KDE_SHORTCUT_AUDIT.md  KEYBOARD_SHORTCUTS.md  PR_SUMMARY.md  QUICK_START_CLOUD.md  RCOMPARE_PYSIDE_KDE_COMPLIANCE_GITHUB_PLAN.md  TEST_COVERAGE_REPORT.md  WINMERGE_PARITY.md  WINMERGE_PARITY_PHASE1.md  WINMERGE_PARITY_PHASE1_SUMMARY.md  WINMERGE_PARITY_USER_REQUESTS_STATUS.md
examples/: archive_comparison.rs  basic_comparison.rs  cloud_storage_example.rs  specialized_formats.rs
rcompare_cli/: Cargo.toml
rcompare_cli/src/: main.rs
rcompare_cli/tests/: cli_scan.rs  integration_test.rs
rcompare_common/: Cargo.toml
rcompare_common/src/: config.rs  error.rs  lib.rs  patch_types.rs  types.rs  vfs.rs
rcompare_core/: Cargo.toml
rcompare_core/benches/: core_benchmarks.rs
rcompare_core/src/: binary_diff.rs  comparison.rs  csv_diff.rs  excel_diff.rs  file_operations.rs  hash_cache.rs  image_diff.rs  json_diff.rs  lib.rs  merge_engine.rs  parquet_diff.rs  patch_engine.rs  patch_serializer.rs  resumable_copy.rs  scanner.rs  text_diff.rs
rcompare_core/src/patch_parser/: context.rs  ed.rs  mod.rs  normal.rs  rcs.rs  unified.rs
rcompare_core/src/vfs/: archive.rs  local.rs  mod.rs  s3.rs  sftp.rs  tests_archive.rs  tests_cloud.rs  tests_local.rs  tests_virtual.rs  virtual_vfs.rs  webdav.rs
rcompare_ffi/: CMakeLists.txt  Cargo.toml  README.md
rcompare_ffi/examples/: CMakeLists.txt  patch_apply.c  simple_parse.c
rcompare_ffi/include/: rcompare.h  rcompare_ffi.h
rcompare_ffi/src/: lib.rs
rcompare_gui/: Cargo.toml
rcompare_gui/src/: main.rs
rcompare_gui/tests/: ui_compile.rs
rcompare_gui/ui/: main.slint
rcompare_pyside/: org.aecs4u.rcompare.desktop  org.aecs4u.rcompare.metainfo.xml  pyproject.toml
rcompare_pyside/rcompare_pyside/: __init__.py  __main__.py  app.py  main_window.py
rcompare_pyside/rcompare_pyside/dialogs/: about_dialog.py  profiles_dialog.py  settings_dialog.py  splash_dialog.py  sync_dialog.py
rcompare_pyside/rcompare_pyside/models/: comparison.py  settings.py  tree_model.py
rcompare_pyside/rcompare_pyside/resources/: themes.py
rcompare_pyside/rcompare_pyside/utils/: cli_bridge.py  config.py
rcompare_pyside/rcompare_pyside/views/: folder_view.py  hex_view.py  image_view.py  path_bar.py  text_view.py
rcompare_pyside/rcompare_pyside/widgets/: diff_text_edit.py  filter_bar.py
rcompare_pyside/rcompare_pyside/workers/: comparison_worker.py
