[package]
name = "rcompare_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rcompare_common = { path = "../rcompare_common" }
rcompare_core = { path = "../rcompare_core" }

clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
indicatif.workspace = true

[dev-dependencies]
tempfile.workspace = true
filetime.workspace = true
assert_cmd = "2.0"
