[package]
name = "rcompare_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rcompare_common = { path = "../rcompare_common" }

serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Filesystem
jwalk.workspace = true
ignore.workspace = true

# Hashing
blake3.workspace = true

# Serialization
bincode.workspace = true
toml.workspace = true

# Diffing
similar.workspace = true

# Syntax highlighting
syntect.workspace = true

# Image processing
image.workspace = true

# CSV processing
csv.workspace = true

# Excel processing
calamine.workspace = true

# JSON/YAML processing
serde_json.workspace = true
serde_yaml.workspace = true

# DataFrame/Parquet processing
polars.workspace = true

# Archive handling
zip.workspace = true
tar.workspace = true
flate2.workspace = true
sevenz-rust.workspace = true
bzip2.workspace = true
xz2.workspace = true
unrar.workspace = true

# Pattern matching
glob.workspace = true

# Temp extraction for 7z
tempfile.workspace = true

# Concurrency
rayon.workspace = true
crossbeam.workspace = true

# Platform paths
directories.workspace = true
filetime.workspace = true
trash.workspace = true

# SSH/SFTP
ssh2.workspace = true

# Cloud storage - S3
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true

# Cloud storage - WebDAV and HTTP
reqwest.workspace = true
bytes.workspace = true
async-trait.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
