[package]
name = "rcompare_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rcompare_common = { path = "../rcompare_common" }
rcompare_core = { path = "../rcompare_core" }

slint.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam.workspace = true
directories.workspace = true
chrono.workspace = true
native-dialog = "0.7"

[build-dependencies]
slint-build = "1.9"

[dev-dependencies]
slint-build = "1.9"
tempfile.workspace = true
