[project]
name = "rcompare-pyside"
version = "0.1.0"
description = "PySide6 GUI frontend for RCompare file comparison tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
rcompare-gui = "rcompare_pyside.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
